--- a/playstore/app/views/add.scala.html
+++ b/playstore/app/views/add.scala.html
@@ -1,4 +1,4 @@
-@(form : Form[net.glorat.cqrs.example.CreateInventoryItem])
+@(form : Form[net.glorat.cqrs.example.CreateInventoryItem])(implicit request: MessagesRequestHeader)
 
 @main("Add new item") {
 
