chore: upgrade to scala 2.12

--- a/playstore/app/views/add.scala.html
+++ b/playstore/app/views/add.scala.html
@@ -1,8 +1,9 @@
-@(form : Form[net.glorat.cqrs.example.CreateInventoryItem])
+@(form : Form[net.glorat.cqrs.example.CreateInventoryItem])(implicit request: RequestHeader, messagesProvider: MessagesProvider)
 
 @main("Add new item") {
 
 @helper.form(action = routes.Application.doAdd) {
+  @helper.CSRF.formField
   @helper.inputText(form("name"))
   <button name="submit">Submit</button>
 }
